update contact form issue, adjust alignment for post

--- a/_sass/layout/_portfolio.scss
+++ b/_sass/layout/_portfolio.scss
@@ -77,10 +77,11 @@
   }
   .modal-content {
     padding: 100px 0;
-    text-align: center;
+    text-align: justify;
     h2 {
       font-size: 3em;
       margin-bottom: 15px;
+      text-align: center;
     }
     p {
       margin-bottom: 30px;
